--- a/package.json
+++ b/package.json
@@ -2,11 +2,29 @@
   "name": "tailwindcss-fluid",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "files": ["dist"],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "babel":
+      "babel --plugins=transform-object-rest-spread --no-babelrc -d build src",
+    "build": "npm run -s babel && microbundle -i build/index.js -f cjs",
+    "prepublish": "npm run build"
   },
-  "keywords": [],
+  "keywords": ["tailwindcss", "tailwind"],
   "author": "Brad Cornes <bradlc41@gmail.com>",
-  "license": "MIT"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bradlc/tailwindcss-fluid.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bradlc/tailwindcss-fluid/issues"
+  },
+  "homepage": "https://github.com/bradlc/tailwindcss-fluid#readme",
+  "license": "MIT",
+  "devDependencies": {
+    "babel": "^6.23.0",
+    "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "microbundle": "^0.4.4"
+  }
 }
